--- a/Python/uploadserver/index.html
+++ b/Python/uploadserver/index.html
@@ -2,42 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>File Upload</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enhanced File Upload</title>
     <style>
-        #drop-area {
-            width: 300px;
-            height: 100px;
-            border: 2px dashed #ccc;
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            margin: 0;
+            padding: 20px;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        form {
+            background: white;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+
+        h2 {
             text-align: center;
-            margin: 10px;
+            color: #333;
         }
-        #drop-area.highlight {
-            border-color: blue;
+
+        #drag-drop-area {
+            border: 2px dashed #ccc;
+            border-radius: 5px;
+            padding: 20px;
+            text-align: center;
+            cursor: pointer;
+            margin-bottom: 20px;
         }
-        input[type="file"] {
-            display: none;
+
+        #drag-drop-area.hover {
+            background-color: #f9f9f9;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            background-color: #0056b3;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #004494;
+        }
+
+        #file-name {
+            font-size: 0.9rem;
+            color: #666;
+            text-align: center;
+            margin-top: 10px;
+            font-style: italic;
         }
     </style>
 </head>
 <body>
-    <h2>File Upload</h2>
-    <form enctype="multipart/form-data" method="post" action="/" id="file-form">
-        <input type="file" name="file" id="fileElem">
-        <div id="drop-area">
-            <p>Drag and drop a file here, or click to select a file.</p>
+    <form enctype="multipart/form-data" method="post" action="/" id="upload-form">
+        <h2>Upload Your File</h2>
+        <div id="drag-drop-area" onclick="document.getElementById('file-input').click();">
+            Drag and drop files here or <span style="color: #0056b3; text-decoration: underline;">select a file</span>
         </div>
-        <button type="submit">Upload</button>
+        <input type="file" name="file" id="file-input" style="display: none;" onchange="updateFileName()">
+        <div id="file-name">No file selected</div>
+        <button type="submit">Upload File</button>
     </form>
 
     <script>
-        let dropArea = document.getElementById('drop-area');
+        const dropArea = document.getElementById('drag-drop-area');
+        const fileInput = document.getElementById('file-input');
+        const fileNameDisplay = document.getElementById('file-name');
 
         ['dragenter', 'dragover', 'dragleave', 'drop'].forEach(eventName => {
             dropArea.addEventListener(eventName, preventDefaults, false);
-            document.body.addEventListener(eventName, preventDefaults, false);
         });
 
         function preventDefaults(e) {
@@ -46,41 +91,25 @@
         }
 
         ['dragenter', 'dragover'].forEach(eventName => {
-            dropArea.addEventListener(eventName, highlight, false);
+            dropArea.addEventListener(eventName, () => dropArea.classList.add('hover'), false);
         });
 
         ['dragleave', 'drop'].forEach(eventName => {
-            dropArea.addEventListener(eventName, unhighlight, false);
+            dropArea.addEventListener(eventName, () => dropArea.classList.remove('hover'), false);
         });
 
-        function highlight(e) {
-            dropArea.classList.add('highlight');
-        }
-
-        function unhighlight(e) {
-            dropArea.classList.remove('highlight');
-        }
-
-        dropArea.addEventListener('drop', handleDrop, false);
-
-        function handleDrop(e) {
-            let dt = e.dataTransfer;
-            let files = dt.files;
-            handleFiles(files);
-        }
-
-        function handleFiles(files) {
-            document.getElementById('fileElem').files = files;
-            document.getElementById('file-form').submit();
-        }
-
-        dropArea.addEventListener('click', function() {
-            document.getElementById('fileElem').click();
+        dropArea.addEventListener('drop', (e) => {
+            fileInput.files = e.dataTransfer.files;
+            updateFileName();
         });
 
-        document.getElementById('fileElem').addEventListener('change', function() {
-            document.getElementById('file-form').submit();
-        });
+        function updateFileName() {
+            if (fileInput.files.length > 0) {
+                fileNameDisplay.textContent = `Selected file: ${fileInput.files[0].name}`;
+            } else {
+                fileNameDisplay.textContent = 'No file selected';
+            }
+        }
     </script>
 </body>
 </html>
